# Multimodal-AI-App

./: .gitignore  README.md  app.py  main.py  multimodal_app_new.py  multimodal_app_old.py  pyproject.toml  requirements.txt
src/: audio.py  chat.py  image.py  models.py  utils.py
