[project]
name = "multi-modal-ai"
version = "0.1.0"
description = "AI Project which can handle, process and output in Multi-modal formats."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "google-genai>=2.8.0",
    "google-generativeai>=0.8.6",
    "langchain>=1.3.4",
    "langchain-google-genai>=4.2.4",
    "langchain-groq>=1.1.2",
    "langchain-huggingface>=1.2.2",
    "langchain-ollama>=1.1.0",
    "langchain-openai>=1.2.2",
    "openai>=2.41.0",
    "pillow>=12.2.0",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "streamlit>=1.58.0",
    "streamlit-webrtc>=0.72.1",
]
